--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-       <div id="intro">
+       <div id="header">
         
         <div id="nav">
             <nav>
@@ -30,18 +30,44 @@
             <small>Frontend Developer</small>
 
         </div>
-        <div id="socials">
-            <nav>
+        <div >
+            <nav id="socials">
                 <ul>
-                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png" width="20px" height="20px"></li>
-                    <li><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="20px" height="20px"></li>
+                    <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png" width="30px" height="30px"></li>
+                    <li><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="30px" height="30px"></li>
+                    <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmUWGLaq9nBYxPXXgcgv_lobC6K_XsN-RiGPeIFE2Plern7u3ayBSPWU4F0buFcn23ru8&usqp=CAU" width="30px" height="30px"></li>
                 </ul>
             </nav>
         </div>
        </div>
     </header>
+    <hr>
     <main>
+      <div id="intro">
+       <img src="/images/profilepic.jpeg" id="profilepic" width="150px" height="150px">
 
+       <p>I am a Frontend Developer from Nagpur,India.</p>
+      </div>
+      <hr>
+
+      <div id="skills">
+        <h2>SKILLS</h2>
+        <div id="techstack">
+
+            <div width="20px" height="10px">C++</div>
+            <div width="20px" height="10px">HTML5</div>
+            <div width="20px" height="10px">CSS3</div>
+            <div width="20px" height="10px">JAVASCRIPT</div>
+            <div width="20px" height="10px">DATA STRUCTURES AND ALGORITHMS</div>
+            <div width="20px" height="10px">JAVA</div>
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+      </div>
     </main>
     <footer>
 
