--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
         <h2>SKILLS</h2>
         <div id="techstack">
 
-            <div width="20px" height="10px">C++</div>
-            <div width="20px" height="10px">HTML5</div>
-            <div width="20px" height="10px">CSS3</div>
-            <div width="20px" height="10px">JAVASCRIPT</div>
-            <div width="20px" height="10px">DATA STRUCTURES AND ALGORITHMS</div>
-            <div width="20px" height="10px">JAVA</div>
+            <div >C++</div>
+            <div >HTML5</div>
+            <div >CSS3</div>
+            <div >JAVASCRIPT</div>
+            <br>
+            <div >DSA</div>
+            <div >JAVA</div>
         </div>
         <div>
 
