--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div >DSA</div>
             <div >JAVA</div>
         </div>
-        <div>
+        
+      </div>
+      <hr>
+      <div id="education">
+        
 
-        </div>
-        <div>
-
-        </div>
       </div>
     </main>
     <footer>
