--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
         <h2>SKILLS</h2>
         <div id="techstack" width="200px" height="200px">
 
-            <div id="outer-div1"><div id="inner-div1" ><span>C++</span></div></div>
-            <div id="outer-div2"><div id="inner-div2" >HTML</div></div>
-            <div id="outer-div3"><div id="inner-div3" >CSS</div></div>
-            <div id="outer-div4"><div id="inner-div4" >JAVASCRIPT</div></div>
-            <div id="outer-div5"><div id="inner-div5" >DATA STRUCTURES AND ALGORITHMS</div></div>
-            <div id="outer-div6"><div id="inner-div6" >REACT</div></div>
-            <div id="outer-div7"><div id="inner-div7" >JAVA</div></div>
+            <div id="outer-div1"><div id="inner-div1" ><span><b>C++</b></span></div></div>
+            <div id="outer-div2"><div id="inner-div2" ><span><b>HTML5</b></span></div></div>
+            <div id="outer-div3"><div id="inner-div3" ><span><b>CSS3</b></span></div></div>
+            <div id="outer-div4"><div id="inner-div4" ><span><b>JAVASCRIPT</b></span></div></div>
+            <div id="outer-div5"><div id="inner-div5" ><span><b>REACT</b></span></div></div>
+            <div id="outer-div5"><div id="inner-div6" ><span><b>NODEJS</b></span></div></div>
+            <div id="outer-div6"><div id="inner-div7" ><span><b>DATA STRUCTURES</b></span></div></div>
+            <div id="outer-div7"><div id="inner-div8" ><span><b>ALGORITHMS</b></span></div></div>
         </div>
         
     </section>
